cmake_minimum_required(VERSION 4.0)
project(AdventOfCode C)

set(CMAKE_C_STANDARD 23)

file(GLOB YEAR_DIRS "20*")
foreach(year_dir ${YEAR_DIRS})
    if(IS_DIRECTORY ${year_dir})
        file(GLOB DAY_DIRS "${year_dir}/*")
        foreach(day_dir ${DAY_DIRS})
            if(IS_DIRECTORY ${day_dir})
                get_filename_component(year_name ${year_dir} NAME)
                get_filename_component(day_name "${day_dir}" NAME)
                file(GLOB SRCS "${day_dir}/*.c")
                add_executable(${year_name}_${day_name} ${SRCS} aoc.c aoc.h)
            endif()
        endforeach()
    endif()
endforeach()
